<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunter_pltf_bringup</name>
  <version>0.0.0</version>
  <description>Bring up package for Hunter platform, part of the Agri-OpenCore (AOC) project</description>
  <maintainer email="ihroob@lincoln.ac.uk">ihroob</maintainer>
  <author email="ihroob@lincoln.ac.uk">ihroob</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hunter_base</exec_depend>
  <exec_depend>hunter_pltf_description</exec_depend>
  <exec_depend>ros2_livox_simulation</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
